# esp-hosted

./: .gitignore  Cargo.toml  README.md  esp_hosted_protocol.md
build_proto/: Cargo.toml
build_proto/src/: main.rs
src/: ble.rs  esp_errors.rs  header.rs  lib.rs  misc.rs  proto_data.rs  protocol.rs  rf.rs  rpc.rs  rpc_enums.rs  transport.rs  util.rs  wifi.rs
