[package]
name = "esp-hosted"
version = "0.1.0"
edition = "2024"
authors = ["David O'Connor <the_alchemist@fastmail.com>"]
description = "Support for the ESP-Hosted firmware, with an STM32 host."
keywords = ["esp", "stm32", "esp-hosted", "wifi", "ble"]
categories = [
    "embedded",
    "hardware-support",
    "no-std",
]
repository = "https://github.com/David-OConnor/esp-hosted"
documentation = "https://docs.rs/esp_hosted"
readme = "README.md"
license = "MIT"
exclude = [".gitignore"]


[dependencies]
defmt = "1.0.1"

heapless = "0.8.0"
num_enum = { version = "0.7.3", default-features = false }

#hal = { package = "stm32-hal2", version = "1.9.4", features = ["g431"]}

micropb = { version = "0.3.0", features = ["container-heapless"] }


# todo: Allow different features for other MCUs.
#[features]
#hal = ["hal/g431"]


