[package]
name = "esp-hosted"
version = "0.1.4"
edition = "2024"
authors = ["David O'Connor <the_alchemist@fastmail.com>"]
description = "Support for the ESP-Hosted firmware, with an STM32 host."
keywords = ["esp32", "stm32", "esp-hosted", "wifi", "ble"]
categories = [
    "embedded",
    "hardware-support",
    "no-std",
]
repository = "https://github.com/David-OConnor/esp-hosted"
documentation = "https://docs.rs/esp_hosted"
readme = "README.md"
license = "MIT"

# This config is required to allow `proto`, without including it in the repo.
include = [
    "src/**",
    "src/proto.rs",
    "Cargo.toml",
    "README.md",
    "rustfmt.toml",
]


[dependencies]
defmt = "1.0.1"

heapless = "0.8.0"
#heapless = { version = "0.9.0", features=["defmt"] }

num-traits = { version = "0.2.19", default-features = false }
num_enum = { version = "0.7.4", default-features = false }
micropb = { version = "0.3.0", features = ["container-heapless"] }
